--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.1",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.2.5",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.5",
@@ -35,7 +36,10 @@
     "class-validator": "^0.14.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +53,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.2",
+    "@types/nodemailer": "^6.4.11",
+    "@types/passport-http-bearer": "^1.0.38",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.36",
     "@types/supertest": "^2.0.12",
