--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "clipboardy": "^3.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "handlebars": "^4.7.8",
+    "node-clipboardy": "^1.0.3",
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
