--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@casl/ability": "^6.5.0",
-    "@casl/prisma": "^1.4.1",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.2.5",
     "@nestjs/config": "^3.1.1",
@@ -33,6 +31,7 @@
     "@nestjs/platform-express": "^10.2.5",
     "@nestjs/swagger": "^7.1.11",
     "@prisma/client": "^5.3.1",
+    "@webeleon/nestjs-redis": "^0.1.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
