--- a/environments/.env.example
+++ b/environments/.env.example
@@ -6,10 +6,11 @@ PORT=3306
 DATABASE=dana
 
 # Prisma database connection
-DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
+#DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
+DATABASE_URL="mysql://dana:brisk1173@owu.linkpc.net:3306/dana?schema=public"
 
 #Redis
-REDIS_URL=redis://127.0.0.1:6379
+REDIS_URL='redis://localhost:6379'
 
 # Nest
 BASE_URL=http://localhost:3000
