--- a/.env
+++ b/.env
@@ -1,14 +1,15 @@
 DATABASE_URL="mysql://dana:brisk1173@owu.linkpc.net:3306/dana?schema=public"
 
-JWT_SECRET_KEY=secretsecret
-JWT_TTL=30d
+JWT_ACCESS_SECRET_KEY=secretsecret
+JWT_ACCESS_TTL=24h
 
 JWT_ACTIVATE_SECRET=jwtactivatesecret
+JWT_ACTIVATE_TTL=30m
 JWT_RECOVERY_SECRET=jwtrecoverysecret
 SECRET_SALT=10
-EMAIL_USER=example@gmail.com
+EMAIL_USER=useremail@gmail.com
 EMAIL_PASSWORD=password
 
-BASE_URL=http://localhost:3000
+BASE_URL=http://localhost:5100
 
 REDIS_URL='redis://localhost:6379'
