--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.0",
     "copy-paste": "^1.5.3",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "handlebars": "^4.7.8",
