--- a/.env
+++ b/.env
@@ -1,14 +1,20 @@
 DATABASE_URL="mysql://dana:brisk1173@owu.linkpc.net:3306/dana?schema=public"
 
-JWT_ACCESS_SECRET_KEY=secretsecret
-JWT_ACCESS_TTL=24h
+AUTH_ACCESS_TOKEN_EXPIRATION=1h
+AUTH_REFRESH_TOKEN_EXPIRATION=24h
+AUTH_ACCESS_TOKEN_SECRET=accesssecretgnitaerc
+AUTH_REFRESH_TOKEN_SECRET=refreshsecreteromtirw
 
-JWT_ACTIVATE_SECRET=jwtactivatesecret
-JWT_ACTIVATE_TTL=30m
-JWT_RECOVERY_SECRET=jwtrecoverysecret
+ACTIVATE_TOKEN_SECRET=jwtactivatesecretasdfer
+RECOVERY_TOKEN_SECRET=jwtrecoverysecretlkjhgf
+ACTIVATE_TOKEN_EXPIRATION=30m
+RECOVERY_TOKEN_EXPIRATION=30m
+
 SECRET_SALT=10
-EMAIL_USER=useremail@gmail.com
-EMAIL_PASSWORD=password
+EMAIL_USER=example@gmail.com
+EMAIL_PASSWORD=passforapp
+GMAIL_HOST=smtp.gmail.com
+GMAIL_PORT=465
 
 BASE_URL=http://localhost:5100
 
